@@ -53,7 +53,7 @@ $(function () {
             max: 2
         },
         grid: {
-            backgroundColor: "#fffaff"
+            backgroundColor: { colors: ["#fff", "#eee"] }
         }
     });
 });
